# python-project-52

./: .env  .example_env  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: my-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_labels.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
templates/: base.html  delete.html  form.html  home.html  index.html  navigation.html
templates/labels/: index.html
templates/statuses/: index.html
templates/tasks/: index.html  task.html
templates/users/: index.html
