[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["Bkorob <baka311@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
django = "^5.0.3"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
