[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["Bkorob <baka311@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django = "^5.0.3"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
django-filter = "^23.3"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.4.4"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
